# Tetris-Cpp

./: .gitignore  CMakeLists.txt  Makefile  TETRIS.sln  TETRIS.vcxproj  TETRIS.vcxproj.filters  gitignore  main.cpp  readme.md  vcpkg.json
TETRIS/x64/Debug/: TETRIS.ilk  TETRIS.vcxproj.FileListAbsolute.txt  vc143.idb
TETRIS/x64/Debug/TETRIS.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  TETRIS.lastbuildstate  TETRIS.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Tetris-Cpp/x64/Debug/: TETRIS.vcxproj.FileListAbsolute.txt  Tetris-Cpp.exe.recipe  Tetris-Cpp.ilk  vc143.idb
Tetris-Cpp/x64/Debug/Tetris-Cpp.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Tetris-Cpp.lastbuildstate  Tetris-Cpp.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Tetris-Cpp/x64/Release/Tetris-Cpp.tlog/: CL.command.1.tlog  Tetris-Cpp.lastbuildstate
include/: block.h  colors.h  game.h  grid.h  userInterface.h
source/: UserInterface.cpp  block.cpp  colors.cpp  game.cpp  main.cpp  position.cpp
src/: UI.cpp  UI.h  block.cpp  block.h  blocks.cpp  colors.cpp  colors.h  game.cpp  game.h  grid.cpp  grid.h  gridcpp.cpp  main.cpp  position.cpp
src/include/: UserInterface.h  block.h  colors.h  game.h
src/source/: UserInterface.cpp  block.cpp  blocks.cpp  colors.cpp  game.cpp  grid.cpp  main.cpp  position.cpp
x64/Debug/: TETRIS.exe.recipe  TETRIS.ilk  TETRIS.vcxproj.FileListAbsolute.txt  vc143.idb
x64/Debug/TETRIS.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  TETRIS.lastbuildstate  TETRIS.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
